# taskmaster

./: .gitignore  CMakeLists.txt  conf.edge.toml  conf.toml
.run/: taskmaster.run.xml  taskmasterd.run.xml
common/: CMakeLists.txt  State.hpp  TaskData.hpp  common.h
common/include/: TaskData.hpp  tm_common.hpp
common/src/: tm_common.cpp
libserial/: .clang-format  CMakeLists.txt
libserial/include/: common.hpp  deserializer.hpp  serializer.hpp  utils.hpp
libserial/include/deserializers/: deserializeArray.hpp  deserializeArray.tpp  deserializeEnum.hpp  deserializeEnum.tpp  deserializeMap.hpp  deserializeMap.tpp  deserializeObject.hpp  deserializeObject.tpp
libserial/include/serializers/: serializeArray.hpp  serializeArray.tpp  serializeEnum.hpp  serializeEnum.tpp  serializeMap.hpp  serializeMap.tpp  serializeObject.hpp  serializeObject.tpp
libserial/src/: extractRawValues.cpp  skipWhitespaces.cpp
taskmaster/: CMakeLists.txt  Cli.cpp  Cli.hpp  ClientConfig.hpp  CommandParser.cpp  CommandParser.hpp  HttpClient.cpp  HttpClient.hpp  main.cpp
taskmaster/include/: Cli.hpp  ClientConfig.hpp  CommandParser.hpp  HttpClient.hpp
taskmaster/src/: Cli.cpp  CommandParser.cpp  HttpClient.cpp
taskmasterd/: CMakeLists.txt  main.cpp
taskmasterd/include/: AcceptSocket.hpp  HttpListener.hpp  HttpRequest.hpp  HttpRequestBuilder.hpp  HttpResponse.hpp  HttpServer.hpp  HttpSessionSocket.hpp  LockFile.hpp  Logger.hpp  RestartPolicy.hpp  RunningTask.hpp  RunningTaskId.hpp  Server.hpp  ServerConf.hpp  SignalSocket.hpp  Socket.hpp  Task.hpp  TaskConf.hpp  TaskManager.hpp
taskmasterd/src/: AcceptSocket.cpp  HttpListener.cpp  HttpRequest.cpp  HttpRequestBuilder.cpp  HttpResponse.cpp  HttpServer.cpp  HttpSessionSocket.cpp  LockFile.cpp  Logger.cpp  RunningTask.cpp  RunningTaskId.cpp  Server.cpp  SignalSocket.cpp  Socket.cpp  Task.cpp  TaskManager.cpp
